RESOLVED FIXED245340
Fix missing inconsistent override warnings in WC
https://bugs.webkit.org/show_bug.cgi?id=245340
Summary Fix missing inconsistent override warnings in WC
Don Olmstead
Reported 2022-09-18 09:57:46 PDT
...
Attachments
Don Olmstead
Comment 1 2022-09-18 10:00:51 PDT
EWS
Comment 2 2022-09-19 08:00:40 PDT
Committed 254626@main (45ff77cbffa9): <https://commits.webkit.org/254626@main> Reviewed commits have been landed. Closing PR #4464 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-09-19 08:01:19 PDT
Note You need to log in before you can comment on or make changes to this bug.