Fix missing inconsistent override warnings in WC https://bugs.webkit.org/show_bug.cgi?id=245340

Reviewed by Fujii Hironori.

* Source/WebKit/UIProcess/wc/DrawingAreaProxyWC.h:
* Source/WebKit/WebProcess/WebPage/wc/GraphicsLayerWC.h:

Canonical link: https://commits.webkit.org/254626@main